More clean up, removal of old plant record pattern. Made a first pass at cleaning out the Plant object. Added getSummary method to GenericRecord, this can be a template string made up of data points collected by that record.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".PlantTrackerUi"
+            android:name=".activities.PlantTrackerUi"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -32,7 +32,7 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".tracker.CollectPlantData"></activity>
+        <activity android:name=".activities.CollectPlantData"></activity>
     </application>
 
 </manifest>
