Added activity for creating custom generic records, a first step in being able to graph records. Moved the custom event management functionality to a new activity and commented it out, will fix it in the future. Cleaned out the plant tracker settings object, it had old event stuff in it.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".activities.CollectPlantData"></activity>
+        <activity android:name=".activities.CollectPlantData" />
+        <activity android:name=".activities.CreateRecordType"></activity>
     </application>
 
 </manifest>
