--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name=".activities.CreateRecordType"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
-        <activity android:name=".activities.ManageCustomEvents"
+        <activity android:name=".activities.ManageRecordTemplates"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
