Added new icon for record template. Added additional attributions to about dialog. Fixed navbar and notification bar colors for all activities. Disabled add button in manage plant phases display until it is moved into a new activity. Fixed some null reference exceptions which could occur around generic record fields. New apk.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -33,13 +33,13 @@
         </provider>
 
         <activity android:name=".activities.CollectPlantData"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".activities.CreateRecordType"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".activities.ManageRecordTemplates"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
