--- a/plant_tracker/build.gradle
+++ b/plant_tracker/build.gradle
@@ -9,7 +9,8 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
+        // Enabling multidex support.
+        //multiDexEnabled true
     }
     buildTypes {
         release {
