Very rough but working camera support, plants now show last image taken as thumbnail.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
 
         <activity android:name=".activities.PlantCam"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".activities.CameraImagePicker"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
