--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:fullBackupContent="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.PlantTrackerUi"
+            android:name=".android.activities.PlantTrackerUi"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -38,19 +38,19 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".activities.CollectPlantData"
+        <activity android:name=".android.activities.CollectPlantData"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activities.CreateRecordType"
+        <activity android:name=".android.activities.CreateRecordType"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activities.ManageRecordTemplates"
+        <activity android:name=".android.activities.ManageRecordTemplates"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activities.PlantCam"
+        <activity android:name=".android.activities.PlantCam"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activities.CameraImagePicker"
+        <activity android:name=".android.activities.CameraImagePicker"
             android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
