Added activity to view all images for a plant when clicking on the plant thumbnail in the individual plant view. Fixed minor UI bugs.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
         <activity android:name=".android.activities.CameraImagePicker"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".android.activities.ImageSeriesViewer"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
