Some UI rearrangement and styling for the individual plant view re: thumbnail, record creation spinner.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
         <activity android:name=".android.activities.ImageSeriesViewer"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <!--<activity android:name=".android.activities.ImageSeriesViewer"-->
+            <!--android:theme="@style/Theme.AppCompat.Dialog"-->
+            <!--android:excludeFromRecents="true" />-->
+
     </application>
 
 </manifest>
