Changed the collect data activity to use the light dialog theme so it looks like a dialog. Localized more strings.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </provider>
 
         <activity android:name=".android.activities.CollectPlantData"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
 
         <activity android:name=".android.activities.CreateRecordType"
             android:theme="@style/AppTheme.NoActionBar" />
