Clean up for new camera work, new apk. Added constants for directories. Unified file paths so everything is back into the camera directory. Cleaned up some of the mess made by camera work changes. Hid the attach images tab from create plant dialog.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -2,11 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nonsense.planttracker">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.camera2" />
-    <uses-feature android:name="android.hardware.camera2.autofocus" />
-
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -30,7 +26,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.nonsense.planttracker.debug.fileprovider"
+            android:authorities="com.nonsense.planttracker.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
