--- a/plant_tracker/build.gradle
+++ b/plant_tracker/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
     defaultConfig {
         applicationId "com.nonsense.planttracker"
         minSdkVersion 24
@@ -19,7 +18,7 @@ android {
         }
 
         debug {
-            applicationIdSuffix ".debug"
+//            applicationIdSuffix ".debug"
             debuggable true
         }
     }
