Import & Export implementation. Previous export functionality was insufficient, added per-plant exporting and include required groups and templates for the plant. Import functionality implementation. Can import on a per-plant basis, will import groups and record templates too. Soon to follow will be one more (hopefully the last) file system restructuring, I may be able to save some space by using hardlinks to share images across multiple plants. Added more useful functionality to Zipper.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
             android:theme="@style/Theme.AppCompat.Light.Dialog"
             android:excludeFromRecents="true" />
 
+        <activity android:name=".android.activities.ImportExportData"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <!--<activity android:name=".android.activities.ImageSeriesViewer"-->
             <!--android:theme="@style/Theme.AppCompat.Dialog"-->
