--- a/plant_tracker/build.gradle
+++ b/plant_tracker/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'ch.acra:acra-core:5.1.1'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+
+
 //    compile 'com.pes.materialcolorpicker:library:1.2.0'
     testCompile 'junit:junit:4.12'
     implementation 'com.android.support:gridlayout-v7:27.0.2'
