--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity android:name=".android.activities.CollectPlantData"
-            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity android:name=".android.activities.CreateRecordType"
             android:theme="@style/AppTheme.NoActionBar" />
