Group management is back. Added group management activity.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity android:name=".android.activities.ImportExportData"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".android.activities.GroupManagement"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <!--<activity android:name=".android.activities.ImageSeriesViewer"-->
             <!--android:theme="@style/Theme.AppCompat.Dialog"-->
             <!--android:excludeFromRecents="true" />-->
