Proper group management. Added new activity for managing groups. Go into manage groups, tap on a group and manage membership from the new activity. Fixed some bugs with rotation and the PlantTrackerUi activity.

--- a/plant_tracker/src/main/AndroidManifest.xml
+++ b/plant_tracker/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity android:name=".android.activities.GroupManagement"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".android.activities.ListPicker"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <!--<activity android:name=".android.activities.ImageSeriesViewer"-->
             <!--android:theme="@style/Theme.AppCompat.Dialog"-->
             <!--android:excludeFromRecents="true" />-->
